--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.1.1",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
